--- a/alinur/templates/site/index.html
+++ b/alinur/templates/site/index.html
@@ -6,7 +6,7 @@
 
             <div class="col-md-3">
                 <div class="post-preview">
-                    <a href="page.html">
+                    <a href="{% static 'img/catalog1.jpg'%}">
                         <p class="post-meta">February 8, 2018</p>
                         <img class="img-responsive" src="{% static 'img/catalog1.jpg'%}">
                         <h2 class="post-title">
@@ -21,7 +21,7 @@
 
             <div class="col-md-3">
                 <div class="post-preview">
-                    <a href="page.html">
+                    <a href="{% static 'img/catalog2.jpg'%}">
                         <p class="post-meta">February 8, 2018</p>
                         <img class="img-responsive" src="{% static 'img/catalog2.jpg'%}">
                         <h2 class="post-title">
@@ -36,7 +36,7 @@
 
             <div class="col-md-3">
                 <div class="post-preview">
-                    <a href="page.html">
+                    <a href="{% static 'img/catalog3.jpg'%}">
                         <p class="post-meta">February 8, 2018</p>
                         <img class="img-responsive" src="{% static 'img/catalog3.jpg'%}">
                         <h2 class="post-title">
@@ -51,7 +51,7 @@
 
             <div class="col-md-3">
                 <div class="post-preview">
-                    <a href="page.html">
+                    <a href="{% static 'img/catalog4.jpg'%}">
                         <p class="post-meta">February 8, 2018</p>
                         <img class="img-responsive" src="{% static 'img/catalog4.jpg'%}">
                         <h2 class="post-title">
