Fix JQuery links

--- a/alinur/templates/site/base.html
+++ b/alinur/templates/site/base.html
@@ -156,16 +156,16 @@
     </footer>
 
     <!-- jQuery -->
-    <script src="js/jquery.js"></script>
+    <script src="{% static 'js/jquery.js'%}"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="{% static 'js/bootstrap.min.js'%}"></script>
 
     <!-- Custom Theme JavaScript -->
-    <script src="js/small-business.min.js"></script>
+    <script src="{% static 'js/small-business.min.js'%}"></script>
 
     <!-- Smooth Scroll -->
-    <script src="js/SmoothScroll.js"></script>
+    <script src="{% static 'js/SmoothScroll.js'%}"></script>
 
 </body>
 
